# tzelem

./: .gitignore  .vercelignore  AGENTS.md  CLAUDE.md  CNAME  DEPLOYMENT.md  DESIGN_PRD.md  LICENSE  README.md  index.html  package-lock.json  package.json  requirements-vercel.txt  requirements.txt  vercel.json
.claude/: settings.local.json
.claude/commands/: ship-it.md
.github/workflows/: backend-tests.yml
api/: index.py
backend/: .env.example  README.md  main.py  pyproject.toml  quick_test.sh  requirements.txt  run.py  test_flow_commands.md  test_flow_post.sh  test_mail_batch.py  test_mail_comprehensive.py  test_mail_performance.py  test_mail_send.py  test_mail_send.sh  test_rate_limiting.py
backend/api/: __init__.py  flows.py  mail.py  runs.py  voice.py
backend/core/: JSON_flow_agent.py  JSON_flow_agent_sequential.py  config.py  flow_translator.py  productivity_flow_agent.py  rate_limiter.py
backend/services/: __init__.py  daily_service.py
backend/tests/: conftest.py  test_daily_service.py  test_flows.py  test_mail.py  test_voice.py
frontend/app/: .env.example  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/app/.claude/: settings.local.json
frontend/app/auth/: AuthButton.tsx  LoginModal.tsx  ProtectedRoute.tsx  index.ts
frontend/app/convex/: flows.ts  schema.ts
frontend/app/convex/_generated/: api.d.ts
frontend/app/src/: App.tsx  index.css
frontend/app/src/auth/: AuthButton.tsx  LoginModal.tsx  ProtectedRoute.tsx
frontend/app/src/components/: ApiTestPage.tsx  DailyCallFrame.tsx
frontend/app/src/components/common/: ErrorBoundary.tsx  LoadingSpinner.tsx
frontend/app/src/components/layout/: Header.tsx
frontend/app/src/contexts/: AuthContext.tsx  FlowContext.tsx
frontend/app/src/features/flow/: types.ts
frontend/app/src/features/flow/components/: FlowBuilder.tsx  FlowCanvas.tsx  FlowToolbar.tsx  NodeConfigPanel.tsx  NodePalette.tsx
frontend/app/src/features/flow/components/nodes/: DataCollectionAgentNode.tsx  ExecutionAgentNode.tsx  MailAgentNode.tsx  MasterAgentNode.tsx  RoutingAgentNode.tsx
frontend/app/src/features/flow/nodes/: BaseNode.tsx  DataCollectionAgentNode.tsx  ExecutionAgentNode.tsx  MailAgentNode.tsx  MasterAgentNode.tsx  RoutingAgentNode.tsx
frontend/app/src/features/flow/utils/: export.ts  flowExport.ts  templates.ts  validation.ts
frontend/app/src/features/mail/: MailComposer.tsx
frontend/app/src/features/run/: RunConsole.tsx
frontend/app/src/hooks/: useKeyboardShortcuts.ts  useSSE.ts
frontend/app/src/lib/: api.ts  supabase.ts
frontend/app/src/lib/api/: flows.ts  index.ts  mail.ts  runs.ts  voice.ts
frontend/app/src/lib/types/: flow.ts
frontend/app/src/pages/: AuthCallback.tsx
frontend/app/src/types/: api.ts
scripts/: frontend_implementation_plan.md  mega_frontend_prompt.md  mega_prompt.md
